--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,5 +1,5 @@
 .wy-side-nav-search a img.logo {
-  height: 200px;
+  width: 125px;
 }
 
 .wy-side-nav-search {
@@ -7,5 +7,5 @@
 }
 
 .wy-nav-content {
-    max-width: 1200px;
+    max-width: 1100px;
 }
